# is-rust

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md
benches/: benches.rs
src/: lib.rs
tests/: tests.rs
